--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,9 +2,9 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"type": "cppbuild",
-			"label": "C/C++: gcc.exe arquivo de build ativo",
-			"command": "C:\\MinGW\\bin\\gcc.exe",
+			"type": "shell",
+			"label": "Build Sort",
+			"command": "gcc",
 			"args": [
 				"${workspaceFolder}\\src\\main.c",
 				"${workspaceFolder}\\src\\include\\@util.c",
@@ -14,17 +14,10 @@
 				"${workspaceFolder}\\sort",
 				"-std=c99"
 			],
-			"options": {
-				"cwd": "${fileDirname}"
-			},
-			"problemMatcher": [
-				"$gcc"
-			],
 			"group": {
 				"kind": "build",
 				"isDefault": true
-			},
-			"detail": "compilador: C:\\MinGW\\bin\\gcc.exe"
+			}
 		}
 	]
 }
